force-app/main/default/objects/Mig_FreeeInvoiceLineWork__c/Mig_FreeeInvoiceLineWork__c.object-meta.xml
<CustomObject>
    <description>Migration-only work object for importing existing freee invoice lines into Salesforce invoice lines.</description>
    <label>Freee請求明細移行Work</label>
    <nameField>
        <displayFormat>MFILW-{000000}</displayFormat>
        <label>Freee請求明細移行Work番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Freee請求明細移行Work</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>