force-app/main/default/objects/Mig_FreeeInvoiceLineWork__c/fields/ConfirmedProductMaster__c.field-meta.xml
<CustomField>
    <fullName>ConfirmedProductMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>確定商品マスタ</label>
    <referenceTo>ProductMaster__c</referenceTo>
    <relationshipLabel>Freee請求明細移行Work(確定)</relationshipLabel>
    <relationshipName>MigConfirmedInvoiceLineWorks</relationshipName>
    <type>Lookup</type>
</CustomField>