force-app/main/default/objects/Mig_FreeeInvoiceLineWork__c/fields/CreatedInvoiceLine__c.field-meta.xml
<CustomField>
    <fullName>CreatedInvoiceLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>作成済み請求明細</label>
    <referenceTo>InvoiceLine__c</referenceTo>
    <relationshipLabel>Freee請求明細移行Work</relationshipLabel>
    <relationshipName>MigFreeeInvoiceLineWorks</relationshipName>
    <type>Lookup</type>
</CustomField>