force-app/main/default/objects/Mig_FreeeInvoiceLineWork__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>明細名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>