force-app/main/default/objects/Mig_FreeeInvoiceLineWork__c/fields/FreeeLineId__c.field-meta.xml
<CustomField>
    <fullName>FreeeLineId__c</fullName>
    <label>Freee明細ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>