force-app/main/default/objects/Mig_FreeeInvoiceLineWork__c/fields/InvoiceWork__c.field-meta.xml
<CustomField>
    <fullName>InvoiceWork__c</fullName>
    <label>Freee請求移行Work</label>
    <referenceTo>Mig_FreeeInvoiceWork__c</referenceTo>
    <relationshipLabel>Freee請求明細移行Work</relationshipLabel>
    <relationshipName>InvoiceLineWorks</relationshipName>
    <type>MasterDetail</type>
</CustomField>