force-app/main/default/objects/Mig_FreeeInvoiceLineWork__c/fields/LineAmount__c.field-meta.xml
<CustomField>
    <fullName>LineAmount__c</fullName>
    <label>明細金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>