force-app/main/default/objects/Mig_FreeeInvoiceLineWork__c/fields/ProductResolveStatus__c.field-meta.xml
<CustomField>
    <fullName>ProductResolveStatus__c</fullName>
    <label>商品判定ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>候補あり</fullName><default>false</default><label>候補あり</label></value>
            <value><fullName>確定済み</fullName><default>false</default><label>確定済み</label></value>
            <value><fullName>要確認</fullName><default>true</default><label>要確認</label></value>
            <value><fullName>対象外</fullName><default>false</default><label>対象外</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>