force-app/main/default/objects/Mig_FreeeInvoiceLineWork__c/fields/ResolveConfidence__c.field-meta.xml
<CustomField>
    <fullName>ResolveConfidence__c</fullName>
    <label>判定信頼度</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>