force-app/main/default/objects/Mig_FreeeInvoiceLineWork__c/fields/ResolvedContractLineItem__c.field-meta.xml
<CustomField>
    <fullName>ResolvedContractLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>解決済み契約月次明細</label>
    <referenceTo>ContractLineItem__c</referenceTo>
    <relationshipLabel>Freee請求明細移行Work</relationshipLabel>
    <relationshipName>MigFreeeInvoiceLineWorks</relationshipName>
    <type>Lookup</type>
</CustomField>