force-app/main/default/objects/Mig_FreeeInvoiceLineWork__c/fields/ResolveMessage__c.field-meta.xml
<CustomField>
    <fullName>ResolveMessage__c</fullName>
    <label>判定メッセージ</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>