force-app/main/default/objects/Mig_FreeeInvoiceLineWork__c/fields/SuggestedProductMaster__c.field-meta.xml
<CustomField>
    <fullName>SuggestedProductMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>候補商品マスタ</label>
    <referenceTo>ProductMaster__c</referenceTo>
    <relationshipLabel>Freee請求明細移行Work(候補)</relationshipLabel>
    <relationshipName>MigSuggestedInvoiceLineWorks</relationshipName>
    <type>Lookup</type>
</CustomField>