force-app/main/default/objects/Mig_FreeeInvoiceLineWork__c/fields/TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>TaxAmount__c</fullName>
    <label>税額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>