force-app/main/default/objects/Mig_FreeeInvoiceLineWork__c/fields/TaxRate__c.field-meta.xml
<CustomField>
    <fullName>TaxRate__c</fullName>
    <label>税率</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>