force-app/main/default/objects/Mig_FreeeInvoiceLineWork__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>単位</label>
    <length>40</length>
    <type>Text</type>
</CustomField>