force-app/main/default/objects/Mig_FreeeInvoiceLineWork__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>InvoiceWork__c</columns>
    <columns>Description__c</columns>
    <columns>LineAmount__c</columns>
    <columns>ProductResolveStatus__c</columns>
    <columns>ImportStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて</label>
</ListView>